<resources>

    <string name="app_name">СоцАптека</string>
    <string name="auth_title">Вход</string>
    <string name="auth_desc">Введите свой номер телефона для входа в приложение</string>
    <string name="auth_phone_hint">Номер телефона</string>
    <string name="auth_remember_me">Запомнить меня</string>
    <string name="auth_personal_data">Нажимая на кнопку «Войти» я даю свое согласие на обработку персональных данных</string>
    <string name="auth_send_btn">Отправить</string>
    <string name="auth_phone_error">Номер введен не правильно</string>
    <string name="auth_confirm_title">Подтвердить вход</string>
    <string name="auth_confirm_phone_change">Изменить</string>
    <string name="auth_confirm_phone_desc">На ваш номер отправлено СМС с кодом для подтверждения входа в аккаунт.</string>
    <string name="auth_confirm_login">Войти</string>
    <string name="main_menu_login">Авторизация</string>
    <string name="main_menu_profile">Профиль</string>
    <string name="main_menu_city_not_selected">Город не выбран</string>


    <!-- Drawer -->
    <string name="my_orders">Мои заказы</string>
    <string name="notifications">Уведомления</string>
    <string name="loyalty_program">Программа лояльности</string>
    <string name="referral_program">Реферальная программа</string>
    <string name="pharmacies">Адреса аптек</string>
    <string name="about_company">О компании</string>
    <string name="work_with_us">Работа у нас</string>
    <string name="customers">Покупателям</string>
    <string name="symptoms_and_diseases">Симптомы и болезни</string>
    <string name="legal_documents">Юридические документы</string>
    <string name="rate_app">Оценить приложение</string>


    <string name="contacts">Контакты</string>
    <string name="reviews">Отзывы</string>
    <string name="cooperation">Сотрудничество</string>
    <string name="licenses_and_permits">Лицензии и разрешения</string>
    <string name="partners">Партнерам</string>
    <string name="mobile_application">Мобильное приложение</string>
    <string name="brands">Бренды и производители</string>
    <string name="faq">Вопрос-ответ</string>
    <string name="charity">Благотворительность</string>

</resources>