<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.apteka.components.data.models.ConfirmCodeStatus" />

        <variable
            name="viewModel"
            type="ru.apteka.social.presentation.auth.auth_confirm.AuthConfirmViewModel" />

        <variable
            name="phoneNumber"
            type="String" />

    </data>


    <ru.apteka.components.ui.LoaderLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:isLoading="@{viewModel.isLoading}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/base_padding">

            <TextView
                style="@style/Theme.Socapteki.HeaderH0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_confirm_title" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/color_secondary_container"
                app:cardCornerRadius="12dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAuthConfirmPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:padding="16dp" />

                    <TextView
                        android:id="@+id/tvAuthConfirmPhoneChange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="16dp"
                        android:text="@string/auth_confirm_phone_change"
                        android:textColor="@color/color_primary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/auth_confirm_phone_desc"
                android:textColor="@color/dark_grey" />

            <!-- Поле ввода пинкода -->
            <ru.apteka.components.ui.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:enabled="@{!viewModel.isLoading}"
                android:hint="@string/confirm_code_hint"
                app:errorText="@{viewModel.confirmCodeStatus == ConfirmCodeStatus.ERROR ? @string/confirm_code_error : ``}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAuthConfirmCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_white_background_unfocused_shape"
                    android:digits=" ,_0,1,2,3,4,5,6,7,8,9"
                    android:inputType="number"
                    android:text="@={viewModel.code}" />

            </ru.apteka.components.ui.TextInputLayout>

            <!-- Отпраить код повторно -->
            <include
                layout="@layout/code_did_not_come"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:leftTime="@{viewModel.leftTime}"
                app:onClick="@{viewModel.onNewCode}" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.codeRaw.length == 4 &amp; !viewModel.isLoading}"
                android:onClick="@{() -> viewModel.checkCodeNumber()}"
                android:text="@string/auth_confirm_login" />

        </LinearLayout>

    </ru.apteka.components.ui.LoaderLayout>

</layout>